<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2022, Jean-Baptiste Heyberger & Geoffroy Jamgotchian
    This Source Code Form is subject to the terms of the Mozilla Public
    License, v. 2.0. If a copy of the MPL was not distributed with this
    file, You can obtain one at http://mozilla.org/MPL/2.0/.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.powsybl</groupId>
        <artifactId>powsybl-parent</artifactId>
        <version>24</version>
        <relativePath/>
    </parent>

    <artifactId>powsybl-open-sc</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>powsybl open sc</name>
    <description>An open source short-circuit calculation based on PowSyBl</description>
    <url>https://www.powsybl.org</url>

    <scm>
        <connection>scm:git:https://github.com/powsybl/powsybl-open-sc.git</connection>
        <developerConnection>scm:git:https://github.com/powsybl/powsybl-open-sc.git</developerConnection>
        <url>https://github.com/powsybl/powsybl-open-sc</url>
    </scm>

    <developers>
        <developer>
            <name>Jean-Baptiste HEYBERGER</name>
            <email>jean-baptiste.heyberger@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>https://www.rte-france.com</organizationUrl>
        </developer>
        <developer>
            <name>Geoffroy JAMGOTCHIAN</name>
            <email>geoffroy.jamgotchian@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>https://www.rte-france.com</organizationUrl>
        </developer>
    </developers>

    <modules>
        <module>sc-cgmes</module>
        <module>sc-extensions</module>
        <module>sc-implementation</module>
    </modules>

    <properties>
        <java.version>21</java.version>

        <powsybl-core.version>7.0.1</powsybl-core.version>
        <powsybl-open-loadflow.version>2.0.0</powsybl-open-loadflow.version>
    </properties>

    <profiles>
        <profile>
            <id>release</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>javadoc-aggregate-jar</id>
                                <phase>package</phase>
                                <inherited>false</inherited>
                                <goals>
                                    <goal>aggregate-jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-core</artifactId>
                <version>${powsybl-core.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-open-loadflow</artifactId>
                <version>${powsybl-open-loadflow.version}</version>
            </dependency>
            <!-- project artifacts -->
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>powsybl-open-sc-cgmes</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>powsybl-open-sc-extensions</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>powsybl-open-sc-implementation</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
